# scPRINT

./: Dockerfile  HISTORY.md  Makefile  README.md  presentation.md  pyproject.toml
.github/workflows/: main.yml
docs/: usage.md
notebooks/: bench_denoising.ipynb
notebooks/additional/: scprint_overfit.ipynb  test.ipynb  test_zinb.ipynb  update_lamin_or_cellxgene.ipynb
scprint/model/: utils.py
scprint/tasks/: cell_emb.py  denoise.py  grn.py
tests/: conftest.py  test_base.py
