[project]
name = "scprint"
version = "1.6.0"
description = "scPRINT is a Large Cell Model for Gene Network Inference, Denoising and more from scRNAseq data"
authors = [
    {name = "jeremie kalfon", email = "jkobject@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["scRNAseq", "transformer", "GRN", "gene regulatory network", "scPRINT", "large cell model", "foundation model"]
dependencies = [
    "lamindb==0.76.12",
    "cellxgene-census>=0.1.0",
    "anndata>=0.9.1",
    "torch==2.0.1",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "MarkupSafe==3.0.2",
    "ipykernel>=6.20.0",
    "biomart>=0.9.0",
    "pandas>=2.0.0",
    "leidenalg>=0.10.0",
    "django>=4.0.0",
    "scikit-misc>=0.5.0",
    "scDataLoader>=1.1.3",
    "scikit-learn>=1.4.0",
    "GRnnData>=1.1.4",
    "BenGRN>=1.2.4",
    "gseapy>=0.10.0",
    "owlready2>=0.36",
    "huggingface_hub>=0.10.0",
    "scib>=1.0.0",
    "scib-metrics>=0.1.0",
    "scipy>=1.7.0",
    "numpy>=1.21.0",
    "attridict>=0.0.9",
    "gget>=0.2.0",
    "hdbscan>=0.8.36",
    "fair-esm>=0.5.0",
    "hydra-core>=1.1.0",
    "pynndescent>=0.5.11",
    "einops>=0.3.0",
    "rich>=10.0.0",
    "typeshed-client>=2.0.0",
    "jsonargparse>=4.0.0",
    "docstring-parser>=0.15",
    "wandb>=0.12.0",
    "louvain>=0.8.2",
    "zarr>=2.10.0",
    "tensorly>=0.6.0",
    "numba>=0.56.0",
    "sparse>=0.15.4",
    "bio>=1.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "coverage>=7.3.2",
    "ruff>=0.6.4",
    "pytest-cov>=4.1.0",
    "gitchangelog>=3.0.4",
    "mkdocs>=1.5.3",
    "mkdocs-git-revision-date-localized-plugin>=1.0.0",
    "mkdocstrings>=0.22.0",
    "mkdocs-git-authors-plugin>=0.4.0",
    "mkdocs-jupyter>=0.2.0",
    "mkdocstrings-python>=0.10.0"
]

flash = [
    "triton",
]

[project.urls]
repository = "https://github.com/jkobject/scPRINT"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E203", "E266", "E265", "F401", "F403", "E722", "E741", "E731", "E721"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
scprint = "scprint.__main__:main"
